compiler/tests/fixtures/negative/error_parse2.sol
function start() -> int {
    let x: int = 5
    return x;
}
